--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Recipes"/>
-        <activity android:name=".CreateRecipes"/>
+        <activity android:name=".CreateRecipesActivity"/>
     </application>
 
 </manifest>
