--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,12 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-common:0.9'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation project(path: ':library')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.github.pratikbutani:MultiSelectSpinner:-SNAPSHOT'
     api 'io.jsonwebtoken:jjwt-api:0.11.2'
+
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly('io.jsonwebtoken:jjwt-orgjson:0.11.2') {
         exclude group: 'org.json', module: 'json' //provided by Android natively
