--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".MapActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +42,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RecipeActivity" />
+        <activity android:name=".Recipes" />
         <activity android:name=".CreateRecipeActivity" />
         <activity android:name=".salling.ActivitySallingTest" />
     </application>
