Added Sentry to automatically report crashes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <!--
+            This is for Sentry, so it reports errors :D.
+        -->
+        <meta-data android:name="io.sentry.dsn" android:value="https://31f8cd471c18492c9b447585af9ab7d4@o472376.ingest.sentry.io/5505933" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
