--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.madbudget"
+        applicationId "com.gruppe17.madbudget"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
