--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.madbudget">
+    package="com.gruppe17.madbudget">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -35,18 +35,18 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name="com.gruppe17.madbudget.MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.gruppe17.madbudget.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Recipes" />
-        <activity android:name=".CreateRecipeActivity" />
-        <activity android:name=".salling.ActivitySallingTest" />
+        <activity android:name="com.gruppe17.madbudget.Recipes" />
+        <activity android:name="com.gruppe17.madbudget.CreateRecipeActivity" />
+        <activity android:name="com.gruppe17.madbudget.salling.ActivitySallingTest" />
     </application>
 
 </manifest>
