Ingredient selection funktionelt færdig

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity android:name="com.gruppe17.madbudget.Recipes" />
         <activity android:name="com.gruppe17.madbudget.CreateRecipeActivity" />
         <activity android:name="com.gruppe17.madbudget.salling.ActivitySallingTest" />
+        <service
+            android:name=".DBDeleteService"
+            android:exported="false"/>
     </application>
 
 </manifest>
