--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,15 +36,15 @@
 
         <activity
             android:name="com.gruppe17.madbudget.activities.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name="com.gruppe17.madbudget.activities.MainActivity">
+            android:label="@string/title_activity_maps"/>
+        <activity android:name="com.gruppe17.madbudget.activities.MainActivity"/>
+        <activity android:name="com.gruppe17.madbudget.activities.RecipeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.gruppe17.madbudget.activities.RecipeActivity" />
         <activity android:name="com.gruppe17.madbudget.activities.CreateRecipeActivity" />
         <activity android:name="com.gruppe17.madbudget.activities.TestActivity" />
         <service
