--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name="com.gruppe17.madbudget.activities.CreateRecipeActivity" />
         <activity android:name="com.gruppe17.madbudget.activities.TestActivity" />
         <activity android:name="com.gruppe17.madbudget.activities.CreateIngSelActivity" />
+        <activity android:name="com.gruppe17.madbudget.activities.SearchIngredientActivity" />
         <service
             android:name=".database.DBDeleteService"
             android:exported="false"/>
