--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -60,6 +61,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name="com.gruppe17.madbudget.activities.CreateIngSelActivity"
             android:theme="@style/AppTheme.Transparent"
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible"
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
         <activity android:name="com.gruppe17.madbudget.activities.SearchIngredientActivity"
